syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.github.saturn_xiv.palm.plugins.lemon.v1";
option go_package = "github.com/saturn_xiv/palm/lemon/v2";
package palm.lemon.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Site {
  rpc Layout(SiteLayoutRequest) returns (SiteLayoutResponse) {}
  rpc Rss(google.protobuf.Duration) returns (SiteRssResponse) {}
  rpc Sitemap(google.protobuf.Empty) returns (SiteSitemapResponse) {}
  rpc ShowPage(SiteShowPageRequest) returns (SiteShowPageResponse) {}
  rpc HomePage(SiteHomePageRequest) returns (SiteHomePageResponse) {}
}

message SiteLayoutRequest {
  string locale = 1;
  Theme theme = 2;
}

message SiteLayoutResponse {
  oneof layout {
    CleanWhiteLayout clean_white = 1;
    DocsyLayout docsy = 2;
    GantryLayout gantry = 3;
    HinodeLayout hinode = 4;
    UniversalLayout universal = 5;
    XCorporationLayout x_corporation = 6;
  }
}

message SiteRssResponse { map<string, Rss> items = 1; }

message SiteSitemapResponse { map<string, Sitemap> items = 1; }

message SiteShowPageRequest { string slug = 1; }

message SiteShowPageResponse {
  message Link {
    string slug = 1;
    string title = 2;
  }
  Page page = 1;
  repeated Link related = 2;
}

message SiteHomePageRequest {
  string locale = 1;
  Theme theme = 2;
}

message SiteHomePageResponse {
  oneof payload {
    CleanWhiteHomePage clean_white = 1;
    DocsyHomePage docsy = 2;
    GantryHomePage gantry = 3;
    HinodeHomePage hinode = 4;
    UniversalHomePage universal = 5;
    XCorporationHomePage x_corporation = 6;
  }
}

// ----------------------------------------------------------------------------
enum Theme {
  Universal = 0;
  CleanWhite = 1;
  Docsy = 2;
  Gantry = 3;
  Hinode = 4;
  XCorporation = 5;
}

message CleanWhiteLayout {}

message DocsyLayout {}

message GantryLayout {}

message HinodeLayout {}

message UniversalLayout {}

message XCorporationLayout {}

message CleanWhiteHomePage {}

message DocsyHomePage {}

message GantryHomePage {}

message HinodeHomePage {}

message UniversalHomePage {}

message XCorporationHomePage {}

// ----------------------------------------------------------------------------

message Rss {
  message Link {
    string path = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp updated_at = 9;
  }

  string home = 1;
  string title = 2;
  string description = 3;
  repeated Link links = 9;
}

// ----------------------------------------------------------------------------

message Sitemap {
  message Link {
    enum ChangeFreq {
      Never = 0;
      Always = 1;
      Hourly = 2;
      Daily = 3;
      Weekly = 4;
      Monthly = 5;
      Yearly = 6;
    }
    string path = 1;
    ChangeFreq change_freq = 2;
    float priority = 3;
    google.protobuf.Timestamp updated_at = 9;
  }

  message UrlSet { repeated Link links = 1; }
  message Index { repeated string links = 1; }

  string home = 1;
  oneof body {
    UrlSet urlset = 11;
    Index index = 12;
  }
}

// ----------------------------------------------------------------------------

message Page {
  string slug = 1;
  string title = 2;
}
